feat: track visualizer 구현

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <button id="loadButton" disabled>load</button>
         <button id="playButton" disabled>play</button>
       </div>
+      <ol id="tracks"></ol>
     </main>
     <footer class="copyright-wrapper">
       <p class="copyright">&copy; kennycha</p>
